# cgmserver

./: .gitignore  Cargo.toml  README.md  build.sh
src/: get_now.sql  get_recent.sql  init.sql  insert_entry.sql  main.rs
