[package]
name = "cgmserver"
version = "0.0.0"
authors = ["Wesley Aptekar-Cassels <me@wesleyac.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = { git = "https://github.com/seanmonstar/warp", rev = "ffefea08050ffe8022d3391f4bd5e5ab4e95d7c9" }
rusqlite = { version = "0.24.2", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2.3"
